src/test/wacc/invalid/whack/q6.wacc
# how much wacc could a whack wacc whack,
# if a whack wacc could whack wacc

begin
    int h(string[] arr) return 0 end;
    call h([['h', 'i']])
end
